# fund-watch-bot

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yaml
docker/: docker-config.yaml.esh  fund-watch-bot  start.sh
src/: console.rs  error.rs  event_emitter.rs  fetching.rs  main.rs  market.rs  openfigi.rs  parsing.rs  prelude.rs  repository.rs  sec_gov.rs  serializer.rs  system.rs  telegram.rs
src/app/: model.rs  repository.rs
src/app/model/: date.rs  date_iterator.rs  datetime.rs  day.rs  encoded_uint.rs  entity.rs  identity.rs  month.rs  quartal.rs  timestamp.rs  year.rs  (+2 more)
src/console/: command.rs  console_application.rs  event_handlers.rs  service.rs
src/error/: failure.rs
src/event_emitter/: model.rs  prelude.rs  service.rs  service_handler.rs
src/fetching/: error.rs  events.rs  model.rs  record.rs  service.rs
src/market/: error.rs  fund_report.rs  market_data.rs  model.rs  service.rs
src/openfigi/: model.rs  path_resolver.rs  service.rs
src/parsing/: record.rs  task.rs
src/repository/: file_storage.rs  model.rs  path_mapper.rs  path_resolver.rs  path_resolver_service.rs  query.rs  query_comparator.rs  repository.rs  service.rs  utils.rs
src/sec_gov/: events.rs  model.rs  path_resolver.rs  repository.rs  service.rs  utils.rs
src/serializer/: serializer.rs  service.rs
src/system/: app_config.rs  app_config_loader.rs  console_execution.rs  di.rs  event_emitter_di.rs
src/telegram/: action.rs  controller.rs  event_handlers.rs  model.rs  path_resolver.rs  query.rs  query_handlers.rs  service.rs  service_handlers.rs  task.rs  utils.rs  views.rs
src/yahoo_finance/: model.rs  service.rs
(+341 files in other folders)
