[package]
name = "index-watch"
version = "0.1.0"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
typed-di = {path = "../typed-di"}
telegram-bot = "0.8"
url = {version = "2.2", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
derive-new = "0.5"
reqwest = {version = "0.11", features = ["stream", "json"]}
http = "0.2"
mime = "0.3"
tempfile = "3.1"
async-std = "1.8"
futures = "0.3"
csv = "1.1"
chrono = "0.4"