[package]
name = "fund-watch-bot"
version = "0.1.0"
authors = ["Mikhail Svetov <svmk-tmsk@yandex.ru>"]
edition = "2018"

# Up to 10x more code

[dependencies]
typed-di = {path = "../typed-di"}
url = {version = "2.2", features = ["serde"]}
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
derive_more = "0.99"
derive-new = "0.5"
reqwest = {version = "0.11", features = ["stream", "json"]}
http = "0.2"
mime = "0.3"
tempfile = "3.1"
async-std = "1.8"
futures = "0.3"
csv = "1.1"
chrono = {version = "0.4", features = ["serde"]}
derive_value_object = {path = "../derive_value_object"}
tokio = { version = "1", features = ["full"] }
sxd-document = "0.3"
sxd-xpath = "0.4"
serde-query = "0.1"
itertools = "0.10"
serde_yaml = "0.8"
tbot = {path = "../../tbot"}
async-walkdir = "0.2"
async-trait = "0.1"
rand = "0.8"
radix_fmt = "1.0"
uuid = {version = "0.8", features = ["serde", "v4"]}
structopt = "0.3"